--- a/myfile.css
+++ b/myfile.css
@@ -6,3 +6,11 @@ h1 {
     color: goldrod;
     margin-left: 20px;
 }
+h2 {
+ color: goldrod;
+    margin-left: 20px;
+}
+h3 {
+    color: goldrod;
+    margin-left: 20px;
+}
