--- a/mystyle.css
+++ b/mystyle.css
@@ -6,14 +6,20 @@ h1 {
     color: goldrod;
     margin-left: 20px;
     font-family: 'Courier New', monospace;
+    border: 2px solid red;
+    
 }
 h2 {
  color: goldrod;
     margin-left: 20px;
     font-family:Impact, fantasy
+    border-color:yellow;
+    
+
 }
 h3 {
     color: goldrod;
     margin-left: 20px;
+    border: 2px solid powderblue;
    
 }
