--- a/mystyle.css
+++ b/mystyle.css
@@ -13,7 +13,7 @@ h2 {
  color: goldrod;
     margin-left: 20px;
     font-family:Impact, fantasy
-    border-color:yellow;
+    border-color:black;
     
 
 }
